--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node index.js",
+    "watch": "nodemon start"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -18,5 +19,16 @@
     "twitch": "^4.5.4",
     "twitch-chat-client": "^4.5.5",
     "twitch-webhooks": "^4.5.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-postcss": "^9.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "postcss": "^8.2.9",
+    "postcss-import": "^14.0.1",
+    "postcss-nested": "^5.0.5",
+    "tailwindcss": "^2.1.1"
   }
 }
