--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "detect-port": "^1.3.0",
     "express": "~4.16.1",
     "floating.js": "^2.7.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "nedb": "^1.8.0",
     "obs-websocket-js": "^4.0.2",
     "pug": "^3.0.2",
     "twitch": "^4.5.4",
